fix: improve footer contrast (#2428)

--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -9,6 +9,7 @@
         font-size: var(--typography-size-100);
         text-align: center;
         color: var(--colour-text-subtle);
+        background: var(--surface-level-0);
     }
 
     .footerContainer {
